@@ -4,5 +4,3 @@ LIBRARY_FOLDER_PORTAL_TYPE = 'library_folder'
 LIBRARY_FOLDER_PROXY_PORTAL_TYPE = 'library_folder_proxy'
 
 PARENT_LIBRARIES_ATTRIBUTE = 'parent_libraries'
-
-LIBRARY_ANNOTATION_KEY = 'collective.library-library'
