@@ -1,9 +1,8 @@
 
-from . import constants
 from . import utils as library_utils
 from Products.CMFCore.interfaces import IContentish
+from plone.api import content as content_api
 from plone.indexer.decorator import indexer
-from zope.annotation.interfaces import IAnnotations
 
 
 @indexer(IContentish)
@@ -25,5 +24,6 @@ def parent_libraries(obj):
 
 @indexer(IContentish)
 def library(obj):
-    annotations = IAnnotations(obj)
-    return annotations.get(constants.LIBRARY_ANNOTATION_KEY, None)
+    library = library_utils.get_library(obj)
+    if library is not None:
+        return content_api.get_uuid(library)
