@@ -70,3 +70,5 @@ Changelog
 
 - #2536097: Don't depend on afsoc.plone make collective.alias a soft dependency.
   [JL 2020-07-28]
+
+- Don't store library uid in an annotation.
